<resources>
    <string name="app_name">TrustDevice Fingerprint</string>
    <string name="device_id_title">Your Device ID</string>
    <string name="android_id_title">Android ID</string>
    <string name="risk_labels_title">Risk Labels</string>
    <string name="gsf_id_title">GSF ID</string>
    <string name="gad_id_title">GAD ID</string>
    <string name="media_drm_id_title">Media DRM ID</string>
    <string name="vb_meta_id_title">vbmetaDigest</string>
    <string name="setting_title">Settings</string>
    <string name="internal_storage_title">Internal Storage</string>
    <string name="ram_title">Random Access Memory</string>
    <string name="battery_title">Battery</string>
    <string name="all_apps">Apps</string>
    <string name="all_sensors">Sensors</string>
    <string name="app_list">App list</string>
    <string name="show_system_apps">show system apps</string>
    <string name="hide_system_apps">hide system apps</string>
    <string name="sensor_list">Sensor list</string>
    <string name="tab_title_device_id">Device id</string>
    <string name="tab_title_device_info">Device info</string>
    <string name="memory_desc">The state at the time of collection</string>
    <string name="free_text">Free</string>
    <string name="total_capacity_text">total capacity</string>
    <string name="health_text">health</string>
    <string name="temperature_text">temperature</string>
</resources>