<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/device_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="24sp"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/device_id_title"
            app:layout_constraintTop_toBottomOf="@+id/device_id_title"
            tools:text="xxxxxxxx" />

        <TextView
            android:id="@+id/android_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/app_background"
            android:text="@string/android_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_device_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_device_id" />

        <TextView
            android:id="@+id/tv_android_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/android_id_title"
            app:layout_constraintTop_toBottomOf="@+id/android_id_title"
            tools:text="xxxxxxxx" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/dividing_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_android_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_android_id" />

        <TextView
            android:id="@+id/gsf_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gsf_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/tv_gsf_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gsf_id_title"
            app:layout_constraintTop_toBottomOf="@+id/gsf_id_title"
            tools:text="xxxxxxxx" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/dividing_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_gsf_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_gsf_id" />


        <TextView
            android:id="@+id/gad_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gad_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/tv_gad_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gad_id_title"
            app:layout_constraintTop_toBottomOf="@+id/gad_id_title"
            tools:text="xxxxxxxx" />
        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/dividing_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_gad_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_gad_id" />

        <TextView
            android:id="@+id/media_drm_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/media_drm_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line5"
            app:layout_constraintTop_toBottomOf="@+id/line5" />

        <TextView
            android:id="@+id/tv_media_drm_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/media_drm_id_title"
            app:layout_constraintTop_toBottomOf="@+id/media_drm_id_title"
            tools:text="xxxxxxxx" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/dividing_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_media_drm_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_media_drm_id" />

        <TextView
            android:id="@+id/vb_meta_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/vb_meta_id_title"
            android:textColor="@color/normal_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line3"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <TextView
            android:id="@+id/tv_vmd_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vb_meta_id_title"
            app:layout_constraintTop_toBottomOf="@+id/vb_meta_id_title"
            tools:text="xxxxxxxx" />

        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/dividing_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_vmd_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_vmd_id" />

        <TextView
            android:id="@+id/tv_risk_labels_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/risk_labels_title"
            android:textColor="@color/normal_text"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line4"
            app:layout_constraintTop_toBottomOf="@+id/line4" />

        <TextView
            android:id="@+id/tv_risk_labels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/risk_labels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_risk_labels_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_risk_labels_title"
            tools:text="root" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
